# revit-mcp

./: .gitignore  README.md
addin/RevitMcpAddin/: App.cs  McpProcessManager.cs  McpWebSocketClient.cs  NgrokProcessManager.cs  RevitMcpAddin.csproj  RevitMcpRuntime.cs  RibbonCommands.cs  RibbonIconFactory.cs  SavedToolsWindow.cs  SettingsWindow.cs
docs/: carousel.css  carousel.html  design.md  generate_carousel_images.py  index.html  styles.css
dynamic-tools/: summary.md
installer/: RevitMcp.iss
packaging/pyinstaller/: launcher_entry.py  server_entry.py
python/: pyproject.toml
python/revit_mcp/: launcher.py  saved_tools.py  server.py
scripts/: build-server-exe.ps1  check-release-layout.ps1  fetch-cloudflared.ps1  fetch-ngrok.ps1  install-addin.ps1  package-addins.ps1  package-release.ps1
tests/: test_saved_tools.py
