[project]
name = "revit-mcp"
version = "0.2.0"
description = "MCP server that forwards C# snippets to a Revit add-in over localhost WebSocket."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[project.scripts]
revit-mcp = "revit_mcp.server:main"
revit-mcp-launcher = "revit_mcp.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
